debug-cors-jwt/istio/security/web-api/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authpolicy
  namespace: istioinaction
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /*
    when:
    - key: request.auth.claims[iss]
      values:
      - solo.io
  selector:
    matchLabels:
      app: web-api
